# opencascade-rs

./: .gitignore  Cargo.toml
crates/occt-sys/: Cargo.toml  build.rs
crates/opencascade/: Cargo.toml
crates/opencascade-sys/: Cargo.toml  build.rs
crates/opencascade-sys/include/: wrapper.hxx
crates/opencascade-sys/src/: lib.rs
crates/opencascade/src/primitives/: edge.rs  face.rs  solid.rs
examples/: Cargo.toml
