[package]
name = "opencascade"
description = "A high level Rust wrapper to build 3D models in code, using the OpenCascade CAD kernel"
authors = [
  "Brian Schwind <brianmschwind@gmail.com>",
]
license = "LGPL-2.1"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/a-givertzman/opencascade-rs"

[dependencies]
cxx = "1"
opencascade-sys = { version = "0.2", path = "../opencascade-sys" }
glam = { version = "0.30", features = ["bytemuck"] }
thiserror = "1"

[features]
default = ["builtin"]
builtin = ["opencascade-sys/builtin"]
